Changelog (English)
===================

1.3.5
Redesigned interface (include ActionBarSherlock)
Improved autostart feature
Automatic update operating environment
Added check superuser permissions (root)
Double tap for select profile
Bugfix: incorrect use of default parameter

1.3.4
Added command status to linuxdeploy script
Added function startup GNU/Linux when running Android (Settings -> Autostart)
Excluded lost package insserv form openSUSE installation
Added DPI property for VNC
Improved algorithm displaying reports

1.3.3
Added xorg-fonts-misc package in Arch Linux GUI installation
Bugfix: dbus error for Debian/Ubuntu
Bugfix: update configuration file after change profile

1.3.2
Added support openSUSE installation
Improved Arch Linux mirrors settings
Updated BusyBox
Configuration file is updated only when the parameters are updated
Script linuxdeploy can now be run from Android console
Now can create a symbolic link to linuxdeploy in /system/bin (Settings -> Create symlink)
Notification of need to update the operating environment
Bugfix: wrong information size of image file in automatic calculation mode
Bugfix: crashes when VNC display not integer number

1.3.1
Added support Fedora installation
Improved Arch Linux locale support

1.3.0
Added support Arch Linux installation
Added automatic calculation of image size (90% of free space, but not more than 4095 MB)
Added subitem desktop environment "Other" (for manual settings)
Interface improvements

1.2.9
Bugfix: sudo, upstart, gnome-session, XKL_XMODMAP_DISABLE
Added support ext3 file system
Improved preferences organization
Improved automatic detection of file system
Optimize of making disk image file

1.2.8
Bugfix: problem installing BusyBox on some devices (error updating the operating environment)
Added support installation in directory
Added checking mount points before installation
Rebuilding image file at change the size
Improved custom mounting

1.2.7
Bugfix: incorrect startup GNOME session on Ubuntu