@@ -59,7 +59,7 @@
 
     <!-- Fedora -->
     <string name="fedora_suite" translatable="false">17</string>
-    <string name="fedora_mirror" translatable="false">http://download.fedoraproject.org/pub/fedora-secondary/releases/</string>
+    <string name="fedora_mirror" translatable="false">http://dl.fedoraproject.org/pub/fedora-secondary/releases/</string>
     <string name="fedora_architecture" translatable="false">arm</string>
 
     <!-- openSUSE -->
